// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`beforeEnter redirect on server results does not update state, and instead returns action (i.e. short-circuits) 1`] = `
Object {
  "basename": "",
  "entries": Array [
    Object {
      "basename": "",
      "hash": "",
      "key": "345678",
      "pathname": "/first",
      "search": "",
      "state": Object {},
      "url": "/first",
    },
  ],
  "hasSSR": true,
  "hash": "",
  "index": 0,
  "kind": "load",
  "length": 1,
  "params": Object {},
  "pathname": "/first",
  "prev": Object {
    "basename": "",
    "entries": Array [],
    "hasSSR": true,
    "hash": "",
    "index": -1,
    "kind": "",
    "length": 0,
    "params": Object {},
    "pathname": "",
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "type": "",
    "url": "",
  },
  "query": Object {},
  "scene": "",
  "search": "",
  "state": Object {},
  "status": 200,
  "type": "FIRST",
  "url": "/first",
}
`;

exports[`beforeEnter redirect on server results does not update state, and instead returns action (i.e. short-circuits) 2`] = `
Object {
  "location": Object {
    "committed": false,
    "kind": "redirect",
    "status": 302,
    "url": "/third",
  },
  "status": 302,
  "type": "THIRD",
  "url": "/third",
}
`;

exports[`if beforeEnter dispatches redirect, route changes with kind === "redirect" 1`] = `
Object {
  "basename": "",
  "entries": Array [
    Object {
      "basename": "",
      "hash": "",
      "key": "345678",
      "pathname": "/first",
      "search": "",
      "state": Object {},
      "url": "/first",
    },
    Object {
      "basename": "",
      "hash": "",
      "key": "345678",
      "pathname": "/third",
      "search": "",
      "state": Object {},
      "url": "/third",
    },
  ],
  "hasSSR": false,
  "hash": "",
  "index": 1,
  "kind": "redirect",
  "length": 2,
  "params": Object {},
  "pathname": "/third",
  "prev": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/second/bar",
        "search": "",
        "state": Object {},
        "url": "/second/bar",
      },
    ],
    "hash": "",
    "index": 1,
    "kind": "push",
    "length": 2,
    "params": Object {
      "param": "bar",
    },
    "pathname": "/second/bar",
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "url": "/second/bar",
  },
  "query": Object {},
  "scene": "",
  "search": "",
  "state": Object {},
  "status": 302,
  "type": "THIRD",
  "url": "/third",
}
`;

exports[`route.redirect - automatic 301 redirect 1`] = `
Object {
  "basename": "",
  "entries": Array [
    Object {
      "basename": "",
      "hash": "",
      "key": "345678",
      "pathname": "/first",
      "search": "",
      "state": Object {},
      "url": "/first",
    },
    Object {
      "basename": "",
      "hash": "",
      "key": "345678",
      "pathname": "/third",
      "search": "",
      "state": Object {},
      "url": "/third",
    },
  ],
  "hasSSR": false,
  "hash": "",
  "index": 1,
  "kind": "redirect",
  "length": 2,
  "params": Object {
    "param": "bar",
  },
  "pathname": "/third",
  "prev": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/second/bar",
        "search": "",
        "state": Object {},
        "url": "/second/bar",
      },
    ],
    "hash": "",
    "index": 1,
    "kind": "push",
    "length": 2,
    "params": Object {
      "param": "bar",
    },
    "pathname": "/second/bar",
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "url": "/second/bar",
  },
  "query": Object {},
  "scene": "",
  "search": "",
  "state": Object {},
  "status": 301,
  "type": "THIRD",
  "url": "/third",
}
`;
